# recommendation

./: .gitignore  Makefile  README.md  compose.yaml  fixture.json  pyproject.toml
docker/api/: Dockerfile  entrypoint  start
envs/: .postgres
recommendation/: settings.py  urls.py
recommendation/authentication/: apps.py  serializers.py  session.py  views.py
recommendation/movies/: admin.py  apps.py  models.py  serializers.py  views.py
recommendation/movies/migrations/: 0001_initial.py  0002_alter_movie_unique_together.py
recommendation/users/: admin.py  apps.py  managers.py  mixins.py  models.py  serializers.py  views.py
recommendation/users/migrations/: 0001_initial.py  0002_initial.py  0002_profile.py  0003_remove_profile_watchlist.py
recommendation/watchlist/: admin.py  apps.py  models.py  serializers.py  views.py
recommendation/watchlist/migrations/: 0001_initial.py
